--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,10 @@ langchain
 PyPDF
 faiss-cpu
 langchain-groq
-python-dotenv==1.0.0
-streamlit==1.37.0
-openai==0.27.6
-huggingface-hub==0.14.1
-InstructorEmbedding==1.0.1
+python-dotenv
+streamlit
+openai
+huggingface-hub
+InstructorEmbedding
+langchain-community
 sentence-transformers==2.2.2
-#altair==4
-#tiktoken==0.4.0
